<resources>
    <string name="app_name">1101_aweSQLite</string>
    <string name="editTextCountry">Country</string>
    <string name="editTextCity">City</string>
    <string name="buttonInsert">Insert Record</string>
    <string name="buttonSelect">Read Data</string>
    <string name="textViewResult">Database</string>
    <string name="buttonUpdate">Update Record</string>
    <string name="buttonDelete">Delete Record</string>
</resources>
